[tool.poetry]
name = "fastapistuff"
version = "0.1.0"
description = ""
authors = ["Andrey Belskiy <anb@smena.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
orjson = "^3.9.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
