[tool.poetry]
name = "fastapistuff"
version = "0.1.0"
description = ""
authors = ["Andrey Belskiy <anb@smena.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
orjson = "^3.9.15"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.27"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
